[gd_scene load_steps=27 format=3 uid="uid://bca1ugt1pkoap"]

[ext_resource type="Texture2D" uid="uid://dcjp05rreu4td" path="res://Home/fondos .png" id="1_0lp6k"]
[ext_resource type="Script" path="res://Scripts/Perfiles.gd" id="1_ov40s"]
[ext_resource type="FontFile" uid="uid://w86msflfrqa7" path="res://TEMA Y FUENTE/PixelifySans-VariableFont_wght.ttf" id="2_d5sug"]
[ext_resource type="Texture2D" uid="uid://d0k0626fsopr" path="res://Perfiles/perfil.png" id="3_74dsy"]
[ext_resource type="Texture2D" uid="uid://btcc6agc0vd22" path="res://Perfiles/perfil_hover.png" id="4_0s580"]
[ext_resource type="Texture2D" uid="uid://r4keolbrwggl" path="res://Perfiles/icons9.png" id="5_j8a8a"]
[ext_resource type="Texture2D" uid="uid://bbotk65ohh0ou" path="res://Perfiles/perfil_pressed.png" id="5_wepvm"]
[ext_resource type="Theme" uid="uid://jvw6yg5c2ln7" path="res://TEMA Y FUENTE/TEMAGUI.tres" id="6_gbgyd"]
[ext_resource type="FontFile" uid="uid://cqnvnclwrkga5" path="res://TEMA Y FUENTE/RobotoMono-VariableFont_wght.ttf" id="6_m0pif"]
[ext_resource type="Texture2D" uid="uid://t74tmydmayor" path="res://Perfiles/iconback_pressed.png" id="8_hnlm4"]
[ext_resource type="Texture2D" uid="uid://cb2sc6y66ajo0" path="res://Perfiles/icons7.png" id="10_tnogc"]
[ext_resource type="Texture2D" uid="uid://bt8vflhey2ulv" path="res://Perfiles/icons7disabled.png" id="11_6wwxj"]
[ext_resource type="Texture2D" uid="uid://oxti7aixlr1i" path="res://Perfiles/continuar2.png" id="13_jhf4h"]
[ext_resource type="Texture2D" uid="uid://3pf4640ny47r" path="res://Perfiles/continuar_hover.png" id="14_5wkly"]
[ext_resource type="Texture2D" uid="uid://b0l3fleyrtuc0" path="res://Perfiles/continuar3.png" id="14_8l4dg"]
[ext_resource type="Texture2D" uid="uid://3gwao2ih3vkl" path="res://Perfiles/continuar_disabled.png" id="15_tsnsq"]
[ext_resource type="FontFile" uid="uid://ymxfgrb56kdx" path="res://TEMA Y FUENTE/Abel-Regular.ttf" id="17_2gjst"]
[ext_resource type="AudioStream" uid="uid://bfembxxbfkcat" path="res://Sonidos/Music/8-bit RPG Music _ Village Theme (128 kbps).mp3" id="18_gf7kf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4x8ei"]

[sub_resource type="LabelSettings" id="LabelSettings_kobj0"]
font = ExtResource("6_m0pif")
font_size = 17
font_color = Color(0.584314, 0.321569, 0.501961, 1)
outline_size = 2
outline_color = Color(0.133333, 0.12549, 0.203922, 1)
shadow_size = 2
shadow_color = Color(0.133333, 0.12549, 0.203922, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l310i"]
font = ExtResource("2_d5sug")
font_size = 100
font_color = Color(0.584314, 0.321569, 0.501961, 1)
outline_size = 3
outline_color = Color(0.133333, 0.12549, 0.203922, 1)
shadow_size = 4
shadow_color = Color(0.133333, 0.12549, 0.203922, 1)
shadow_offset = Vector2(2, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d6408"]
texture = ExtResource("13_jhf4h")
texture_margin_left = 10.0
texture_margin_right = 10.0
expand_margin_left = 10.0
expand_margin_top = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qven2"]
texture = ExtResource("14_5wkly")
texture_margin_left = 10.0
texture_margin_right = 10.0
expand_margin_left = 10.0
expand_margin_top = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o11mt"]
texture = ExtResource("14_8l4dg")
texture_margin_left = 10.0
texture_margin_right = 10.0
expand_margin_left = 10.0
expand_margin_top = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gmujq"]
texture = ExtResource("15_tsnsq")
texture_margin_left = 10.0
texture_margin_right = 10.0
expand_margin_left = 10.0
expand_margin_top = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_klhqa"]
font = ExtResource("17_2gjst")
font_size = 30
font_color = Color(0.133333, 0.12549, 0.203922, 1)

[node name="Perfiles" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ov40s")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(574, 324)
scale = Vector2(4.2, 4.2)
texture = ExtResource("1_0lp6k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -502.0
offset_top = -116.0
offset_right = -245.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.9, 3.7)
theme_override_constants/separation = 15
alignment = 1

[node name="Bot贸nPerfil" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_74dsy")
texture_pressed = ExtResource("5_wepvm")
texture_hover = ExtResource("4_0s580")
stretch_mode = 0

[node name="EtiquetaNombre" type="Label" parent="HBoxContainer/Bot贸nPerfil"]
texture_filter = 6
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("6_gbgyd")
theme_override_styles/normal = SubResource("StyleBoxTexture_4x8ei")
label_settings = SubResource("LabelSettings_kobj0")
horizontal_alignment = 1

[node name="TitleScreen" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -294.0
offset_right = 182.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
text = "Perfiles
"
label_settings = SubResource("LabelSettings_l310i")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.0
offset_top = -134.0
offset_right = -66.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
theme_override_constants/separation = 70
alignment = 1

[node name="EliminarBoton" type="TextureButton" parent="HBoxContainer2"]
layout_mode = 2
disabled = true
texture_normal = ExtResource("10_tnogc")
texture_disabled = ExtResource("11_6wwxj")

[node name="VolverHome" type="TextureButton" parent="."]
layout_mode = 1
offset_left = 30.0
offset_top = 18.0
offset_right = 70.0
offset_bottom = 58.0
scale = Vector2(3, 3)
texture_normal = ExtResource("5_j8a8a")
texture_pressed = ExtResource("8_hnlm4")

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 544.0
offset_top = 497.0
offset_right = 684.0
offset_bottom = 545.0
scale = Vector2(6, 1)
theme_override_constants/separation = 35

[node name="Continuar2" type="Button" parent="HBoxContainer3"]
layout_mode = 2
theme = ExtResource("6_gbgyd")
theme_override_styles/normal = SubResource("StyleBoxTexture_d6408")
theme_override_styles/hover = SubResource("StyleBoxTexture_qven2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_o11mt")
theme_override_styles/disabled = SubResource("StyleBoxTexture_gmujq")
disabled = true

[node name="EtiquetaContinuar" type="Label" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 493.0
offset_right = 632.0
offset_bottom = 532.0
theme = ExtResource("6_gbgyd")
text = "Continuar"
label_settings = SubResource("LabelSettings_klhqa")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_gf7kf")
volume_db = -29.715

[connection signal="pressed" from="HBoxContainer/Bot贸nPerfil" to="." method="_on_bot贸n_perfil_pressed"]
[connection signal="pressed" from="HBoxContainer2/EliminarBoton" to="." method="_on_eliminar_boton_pressed"]
[connection signal="pressed" from="VolverHome" to="." method="_on_volver_home_pressed"]
[connection signal="pressed" from="HBoxContainer3/Continuar2" to="." method="_on_continuar_2_pressed"]
